# bbg-openstack

./: setup.cfg  setup.py
bbg_openstack/middleware/: cinder_ssl.py  glance_ssl.py  neutron_ssl.py  nova_ssl.py  ssl.py
