[metadata]
name = bbg-openstack
version = 1.0
summary = addons for openstack
author = Craig Tracey
author-email = craigtracey@gmail.com
home-page = http://www.blueboxcloud.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    bbg_openstack
